added my github

--- a/2019/20-02-2019.md
+++ b/2019/20-02-2019.md
@@ -37,4 +37,4 @@
 - Gustavo Roberto Silva
 - Luiz Carlos Arruda Silva
 - Vinicius Guellis
-- Rafael Costa
+- [**Rafael Costa**](https://github.com/rafaelsevla)
