add lighting talks links

--- a/2019/20-02-2019.md
+++ b/2019/20-02-2019.md
@@ -6,8 +6,8 @@
 - [**Guilherme Diego**](https://github.com/guidiego) - Listas e Tuplas! De onde vem, como são, o que fazem e como trabalhamos.
   - [Palestra](https://docs.google.com/presentation/d/1qGQ5cKqxg9dc8EYeaPvA3KczV5Q3PJE6yipJu5OvEdg/edit?usp=sharing)
 - [**Rafael Cassau**](https://github.com/rafaelcassau) (Lightning Talks)
-  - Magic Methods
-  - Visitor Pattern (Desing Pattern)
+  - [Magic Methods](https://github.com/rafaelcassau/talks/tree/master/overload_operators)
+  - [Visitor Pattern (Desing Pattern)](https://github.com/rafaelcassau/design-patterns/blob/master/behavioral/visitor/refactoring-guru.py)
 
 ### Links Uteis
 - [Flask](http://flask.pocoo.org/)
